# hakaze

./: Cargo.toml
src/: lib.rs  main.rs
src/camera/: camera.rs  mod.rs
src/light/: light.rs  mod.rs  point_light.rs
src/material/: chess_board_material.rs  image_material.rs  material.rs  mod.rs  naive_material.rs
src/object/: mod.rs  object.rs
src/ray/: ray.rs
src/scene/: mod.rs  scene.rs
src/tracing/: binary_tracing.rs  mod.rs  my_tracing.rs  tracing.rs
