[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
#linker = "rust-lld"
rustflags = [
    "-C", "link-arg=-fuse-ld=lld"
]

[dependencies]
cgmath = "0.18.0"
image = "0.23.14"